2023-01-23 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_mips-cpu.c, lib/jit_mips-cpu.c: Use pseudo instructions
	"b" (BEQ(0,0,disp)) and "bal" (BGEZAL(0,disp)) for mips2, when an
	unconditional branch or function call is known to be in range of a
	relative jump. This should significantly reduce jit size generation.

2023-01-20 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_mips-cpu.c, lib/jit_mips.c, lib/jit_rewind.c: Adapt
	code to implement a variable framesize and optimize frame pointer
	for simple leaf functions.

2023-01-19 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_riscv.c, lib/jit_riscv-cpu.c: Adapt code to use a
	variable framesize. Previously it was aligning the stack at
	8 bytes, not 16. Now functions are called with a 16 byte aligned
	stack.

2023-01-18 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_private.h: Include new framesize field
	of jit_compiler_t; add new alist field for jit_function_t; add
	new cvt_offset and need_stack fields specific to x86.
	* lib/jit_x86.c, lib/jit_x86-cpu: Rewrite code to create stack
	frames, so that less stack space can be used if no, or very few
	callee save registers are modified in a function.
	* jit_x86-sse.c, jit_x86-x87.c: Make CVT_OFFSET variable, and
	dynamically allocated; this is required to avoid needing to
	modify twice %rsp at function prologs, even if no stack space
	is used.

2022-11-09 Paulo Andrade <pcpa@gnu.org>

	* configure.ac: Add new --enable-devel-strong-type-checking
	option.
	* include/lightning.h.in: Rework to not need to know if
	PACKED_STACK is defined, and add a new argument to _jit_arg,
	_jit_putarg{r,i}, _jit_pusharg{r,i} and _jit_ret{r,i} to have
	the same code path if PACKED_STACK is defined or not, and also
	to implement STRONG_TYPE_CHECK enabled with the new
	--enable-devel-strong-type-checking.
	* include/lightning/jit_private.h: Add new macros to add assertions
	for STRONG_TYPE_CHECK and avoid pasting tokens in jit_inc_synth*
	when the token is not a static known value.