@@ -4052,6 +4052,7 @@ generic_bswapr_ul(jit_state_t *_jit, jit_int32_t r0, jit_int32_t r1)
 
     jit_unget_reg(reg);
 }
+#endif
 
 static maybe_unused void
 _patch_alist(jit_state_t *_jit, jit_bool_t revert)
@@ -4087,4 +4088,3 @@ _patch_alist(jit_state_t *_jit, jit_bool_t revert)
 	}
     }
 }
-#endif
